# qwen-memoryagent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONSENT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  SUBMISSION.md  THIRD_PARTY_NOTICES.md  demo.py  ethics.example.yaml  eval.py  live_scenarios.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: ALIBABA-DEPLOY-PROOF.md  DEVPOST-SUBMISSION.md  ETHICS_ONBOARDING.md  blog-build-journey.md  build-journey.md  ci-workflow.yml.txt  demo-script.md  sample-run.md
docs/legal/: ACCEPTABLE_USE_POLICY.md  DISCLAIMER.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md
docs/transcripts/: live-cross-session-demo.md  live-full-capability-demo.md  live-http-service-demo.md
scripts/: demo_beats34.sh  demo_play.sh  live_full_demo.py  live_http_demo.py  run_beats34_win.cmd  run_demo_win.cmd  verify.py
src/memoryagent/: __init__.py  agent.py  app.py  cli.py  config.py  memory.py  policy.py  qwen.py
tests/: conftest.py  test_agent.py  test_app.py  test_cli.py  test_config_env.py  test_eval.py  test_hardening_branches.py  test_memory.py  test_memory_durability.py  test_memory_no_leak.py  test_memory_valid_record.py  test_policy.py  test_policy_failclosed.py  test_qwen_transport.py  test_recall_cosine.py  test_user_root_isolation.py
